# MDS-RL_Text_Flappy_Bird

./: .gitignore  README.md  TFB_MCSarsa_MARTINI.ipynb  pyproject.toml  requirements.txt
report/: mybibliography.bib  report.tex  samplepaper.tex
scripts/: demo.py
