[project]
name = "tfb"
version = "0.1.0"
description = "[CentraleSupélec] Reinforcement Learning Project on the Text Flappy Bird Game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium==0.29.0",
    "numpy>=2.2.6",
    "text-flappy-bird-gym",
]

[tool.uv.sources]
text-flappy-bird-gym = { git = "https://gitlab-research.centralesupelec.fr/stergios.christodoulidis/text-flappy-bird-gym.git" }
