[project]
name = "tfb"
version = "0.1.0"
description = "[CentraleSupélec] Reinforcement Learning Assignment on the Text Flappy Bird Game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium==0.29.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "text-flappy-bird-gym",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
text-flappy-bird-gym = { git = "https://gitlab-research.centralesupelec.fr/stergios.christodoulidis/text-flappy-bird-gym.git" }
